# velouria

./: README.md  stack.yaml  velouria.cabal
app/: devel.hs
config/: routes  settings.yml  sqlite.yml
locale/: en.msg
src/: Application.hs  Foundation.hs  Import.hs  Model.hs  Partials.hs  Settings.hs
src/Handler/: ForumCreate.hs  ForumView.hs  Home.hs  TopicCreate.hs  TopicView.hs
src/Import/: NoFoundation.hs
src/Model/: NodeType.hs  Slug.hs  UserRole.hs  schema
src/Settings/: StaticFiles.hs
src/View/: Form.hs
templates/: @forumList.hamlet  @topicList.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  forum.hamlet  homepage.hamlet  topic.cassius  topic.hamlet
